Mejoras a la clase SolicitudAyudaService y creación de SolicitudAyudaRepository